--- a/Server.html
+++ b/Server.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <title>Server – Logic Hub</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Basic styling for layout and visual clarity -->
   <style>
     body {
       font-family: system-ui, sans-serif;
@@ -15,6 +17,7 @@
       flex-direction: column;
       height: 100vh;
     }
+
     .panel {
       flex: 1;
       display: flex;
@@ -23,14 +26,17 @@
       align-items: center;
       border-bottom: 2px solid #1e2b4a;
     }
+
     .panel:last-child {
       border-bottom: none;
     }
+
     .label {
       color: #9fb3d9;
       font-size: 1.5em;
       margin-bottom: 12px;
     }
+
     .value {
       font-size: 2em;
       font-weight: bold;
@@ -39,34 +45,44 @@
   </style>
 </head>
 <body>
+
+  <!-- Panel to show current GPS coordinates -->
   <div class="panel" id="gpsPanel">
     <div class="label">Current GPS</div>
     <div class="value" id="gps">Waiting...</div>
   </div>
+
+  <!-- Panel to show the next drop-off destination -->
   <div class="panel" id="dropoffPanel">
     <div class="label">Next Drop-Off</div>
     <div class="value" id="next">None</div>
   </div>
 
   <script>
-    const ws = new WebSocket('ws://192.168.1.61:3000');
+    // Connect to WebSocket server (update IP if needed)
+    const ws = new WebSocket('ws://10.166.28.236:8080');
+
+    // Register this client as the 'server' role when connection opens
     ws.addEventListener('open', () => {
       ws.send(JSON.stringify({ type: 'register', role: 'server' }));
     });
 
+    // Variables to track destination and alert state
     let nextDestination = null;
     let alertActive = false;
     let alertTimer = null;
 
+    // Update the drop-off panel with selected destination
     function setNext(dest) {
       nextDestination = dest;
       document.getElementById('next').textContent =
         `${dest.name} (${dest.lat.toFixed(6)}, ${dest.lng.toFixed(6)})`;
     }
 
+    // Calculate distance between two GPS coordinates using the Haversine formula
     function haversine(lat1, lon1, lat2, lon2) {
       const toRad = x => x * Math.PI / 180;
-      const R = 6371000; // meters
+      const R = 6371000; // Earth's radius in meters
       const dLat = toRad(lat2 - lat1);
       const dLon = toRad(lon2 - lon1);
       const a = Math.sin(dLat/2)**2 +
@@ -76,10 +92,12 @@
       return R * c;
     }
 
+    // Trigger alert to driver when close to destination
     function triggerDriverAlert(dest) {
-      if (alertActive) return; // prevent multiple triggers
+      if (alertActive) return; // Prevent duplicate alerts
       alertActive = true;
 
+      // Send alert message to driver
       ws.send(JSON.stringify({
         type: 'driver_alert',
         destination: dest,
@@ -87,25 +105,35 @@
         durationMs: 30000
       }));
 
+      // Reset alert after 30 seconds and notify drop-off completion
       alertTimer = setTimeout(() => {
         alertActive = false;
         ws.send(JSON.stringify({ type: 'dropoff_completed', destination: dest }));
-        // Optionally clear nextDestination here
+        // Optional: clear destination
         // nextDestination = null;
       }, 30000);
     }
 
+    // Handle incoming WebSocket messages
     ws.addEventListener('message', (ev) => {
       let msg;
-      try { msg = JSON.parse(ev.data); } catch { return; }
+      try {
+        msg = JSON.parse(ev.data);
+      } catch {
+        return; // Ignore malformed messages
+      }
 
+      // Update destination when selected by passenger
       if (msg.type === 'destination_selected' && msg.destination) {
         setNext(msg.destination);
       }
 
+      // Update GPS panel and check proximity to destination
       if (msg.type === 'gps_update') {
         document.getElementById('gps').textContent =
           `${msg.lat.toFixed(6)}, ${msg.lng.toFixed(6)} @ ${new Date(msg.ts).toLocaleTimeString()}`;
+
+        // If destination is set, check if within 30 meters
         if (nextDestination) {
           const d = haversine(msg.lat, msg.lng, nextDestination.lat, nextDestination.lng);
           if (d < 30) triggerDriverAlert(nextDestination);
