--- a/Tablet.html
+++ b/Tablet.html
@@ -4,12 +4,15 @@
   <meta charset="UTF-8" />
   <title>Passenger – Drop-Off Selector</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Basic styling for layout and UI components -->
   <style>
     body {
       font-family: system-ui, sans-serif;
       margin: 0; padding: 16px;
       background: #f9f9f9; color: #333;
     }
+
     .card {
       background: #ffffff;
       border: 1px solid #ddd;
@@ -19,7 +22,10 @@
       margin: auto;
       box-shadow: 0 2px 6px rgba(0,0,0,0.08);
     }
+
     h1 { margin-top: 0; color: #222; }
+
+    /* Search input styling */
     #search {
       width: 100%;
       padding: 10px;
@@ -29,11 +35,15 @@
       color: #333;
       margin-bottom: 12px;
     }
+
+    /* Grid layout for destination buttons */
     .dest-grid {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
       gap: 12px;
     }
+
+    /* Destination button styling */
     .dest-btn {
       background: #f0f0f0;
       border: 1px solid #ccc;
@@ -44,16 +54,20 @@
       transition: all 0.2s ease;
       color: #333;
     }
+
     .dest-btn:hover {
       background: #e6e6e6;
       transform: scale(1.03);
     }
+
     .dest-btn.selected {
       background: #e0f7e9;
       border-color: #1fa97a;
       color: #0b5c3a;
       font-weight: bold;
     }
+
+    /* Confirm button styling */
     #confirmBtn {
       margin-top: 16px;
       width: 100%;
@@ -65,47 +79,83 @@
       font-weight: bold;
       cursor: pointer;
     }
-    #confirmBtn:disabled { opacity: 0.5; cursor: not-allowed; }
-    .confirm-banner {
-      margin-top: 12px; padding: 10px;
-      border-radius: 8px; background: #e0f7e9; color: #0b5c3a;
-      display: none; animation: pop 250ms ease-out;
+
+    #confirmBtn:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
     }
+
+    /* Confirmation banner styling */
+    .confirm-banner {
+      margin-top: 12px;
+      padding: 10px;
+      border-radius: 8px;
+      background: #e0f7e9;
+      color: #0b5c3a;
+      display: none;
+      animation: pop 250ms ease-out;
+    }
+
     @keyframes pop {
       from { transform: scale(0.95); opacity: 0; }
       to { transform: scale(1); opacity: 1; }
     }
-    .status { margin-top: 12px; font-size: 14px; color: #555; }
+
+    /* Status text styling */
+    .status {
+      margin-top: 12px;
+      font-size: 14px;
+      color: #555;
+    }
   </style>
 </head>
 <body>
+
+  <!-- Main card container -->
   <div class="card">
     <h1>Select Drop-Off</h1>
+
+    <!-- Search input for filtering destinations -->
     <input id="search" placeholder="Search destinations" />
 
+    <!-- Grid container for destination buttons -->
     <div class="dest-grid" id="destGrid"></div>
 
+    <!-- Confirm selection button -->
     <button id="confirmBtn">Confirm</button>
+
+    <!-- Confirmation banner -->
     <div class="confirm-banner" id="confirmedBanner">Confirmed ✅</div>
+
+    <!-- Status display -->
     <div class="status" id="status">No selection yet.</div>
   </div>
+
+  <!-- Manual GPS trigger button -->
   <button onclick="triggerGPS()">Enable GPS</button>
+
   <script>
-    const WS_URL = 'ws://192.168.1.61:3000'; // change to your server IP
+    // WebSocket connection to backend server
+    const WS_URL = 'ws://10.166.28.236:8080'; // Replace with your server IP
     const ws = new WebSocket(WS_URL);
 
+    // Register this client as a 'passenger' when connected
     ws.addEventListener('open', () => {
       ws.send(JSON.stringify({ type: 'register', role: 'passenger' }));
       document.getElementById('status').textContent = 'Connected.';
     });
+
+    // Update status when disconnected
     ws.addEventListener('close', () => {
       document.getElementById('status').textContent = 'Disconnected.';
     });
 
+    // Unique passenger ID for tracking
     const passengerId = 'p-' + Math.random().toString(36).slice(2);
     let cooldown = false;
     let selectedDest = null;
 
+    // List of available destinations
     const destinations = [
       { name: "SM City General Santos", lat: 6.1164, lng: 125.1716 },
       { name: "KCC Mall of Gensan", lat: 6.1127, lng: 125.1710 },
@@ -114,20 +164,24 @@
       { name: "Notre Dame of Dadiangas University", lat: 6.1150, lng: 125.1740 }
     ];
 
+    // Render destination buttons dynamically
     const grid = document.getElementById('destGrid');
     destinations.forEach(dest => {
       const btn = document.createElement('div');
       btn.className = 'dest-btn';
       btn.textContent = dest.name;
+
+      // Handle selection logic
       btn.addEventListener('click', () => {
         document.querySelectorAll('.dest-btn').forEach(b => b.classList.remove('selected'));
         btn.classList.add('selected');
         selectedDest = dest;
       });
+
       grid.appendChild(btn);
     });
 
-    // Search filter
+    // Filter destinations based on search input
     document.getElementById('search').addEventListener('input', (e) => {
       const filter = e.target.value.toLowerCase();
       document.querySelectorAll('.dest-btn').forEach(btn => {
@@ -135,7 +189,7 @@
       });
     });
 
-    // Confirm button
+    // Confirm button logic
     document.getElementById('confirmBtn').addEventListener('click', () => {
       if (cooldown) return;
       if (!selectedDest) {
@@ -143,25 +197,29 @@
         return;
       }
 
+      // Send selected destination to server
       ws.send(JSON.stringify({
         type: 'destination_selected',
         passengerId,
         destination: selectedDest
       }));
 
+      // Show confirmation banner
       const banner = document.getElementById('confirmedBanner');
       banner.style.display = 'block';
       setTimeout(() => banner.style.display = 'none', 1200);
 
+      // Disable button temporarily to prevent spam
       const btn = document.getElementById('confirmBtn');
       btn.disabled = true;
       cooldown = true;
       setTimeout(() => { btn.disabled = false; cooldown = false; }, 3000);
 
+      // Update status text
       document.getElementById('status').textContent = `Next Drop-Off: ${selectedDest.name}`;
     });
 
-    // GPS streaming
+    // Send GPS data to server continuously
     function sendGPS(position) {
       const { latitude, longitude } = position.coords;
       ws.send(JSON.stringify({
@@ -172,37 +230,41 @@
         ts: Date.now()
       }));
     }
+
+    // Start GPS streaming if supported
     if ('geolocation' in navigator) {
-  navigator.geolocation.watchPosition(
-    sendGPS,
-    (err) => console.error('GPS error:', err),
-    {
-      enableHighAccuracy: true,
-      maximumAge: 1000,
-      timeout: 5000
+      navigator.geolocation.watchPosition(
+        sendGPS,
+        (err) => console.error('GPS error:', err),
+        {
+          enableHighAccuracy: true,
+          maximumAge: 1000,
+          timeout: 5000
+        }
+      );
     }
-  );
-}
-  function triggerGPS() {
-  if ('geolocation' in navigator) {
-    navigator.geolocation.getCurrentPosition(
-      (pos) => {
-        alert('Location access granted!');
-        sendGPS(pos);
-      },
-      (err) => {
-        alert('Location error: ' + err.message);
-      },
-      {
-        enableHighAccuracy: true,
-        maximumAge: 1000,
-        timeout: 5000
+
+    // Manual GPS trigger (fallback or refresh)
+    function triggerGPS() {
+      if ('geolocation' in navigator) {
+        navigator.geolocation.getCurrentPosition(
+          (pos) => {
+            alert('Location access granted!');
+            sendGPS(pos);
+          },
+          (err) => {
+            alert('Location error: ' + err.message);
+          },
+          {
+            enableHighAccuracy: true,
+            maximumAge: 1000,
+            timeout: 5000
+          }
+        );
+      } else {
+        alert('Geolocation not supported on this device.');
       }
-    );
-  } else {
-    alert('Geolocation not supported on this device.');
-  }
-}
+    }
   </script>
 </body>
 </html>
