--- a/Tablet.html
+++ b/Tablet.html
@@ -136,7 +136,7 @@
 
   <script>
     // WebSocket connection to backend server
-    const WS_URL = 'ws://10.166.28.236:8080'; // Replace with your server IP
+    const WS_URL = 'wss://https://bkornblume-r1999.github.io/GPS/Tablet.html'; // Replace with your server IP
     const ws = new WebSocket(WS_URL);
 
     // Register this client as a 'passenger' when connected
@@ -157,7 +157,7 @@
 
     // List of available destinations
     const destinations = [
-      { name: "SM City General Santos", lat: 6.1164, lng: 125.1716 },
+      { name: "SM City General Santos", lat: 6.115971, lng: 125.606298 },
       { name: "KCC Mall of Gensan", lat: 6.1127, lng: 125.1710 },
       { name: "Gensan Public Market", lat: 6.1169, lng: 125.1733 },
       { name: "General Santos Airport", lat: 6.0583, lng: 125.0964 },
